--- a/XssBlog/WebContent/WEB-INF/web.xml
+++ b/XssBlog/WebContent/WEB-INF/web.xml
@@ -6,6 +6,10 @@
   	<servlet-name>default</servlet-name>
 	<url-pattern>*.css</url-pattern>
   </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>default</servlet-name>
+	<url-pattern>*.js</url-pattern>
+  </servlet-mapping>
 
   <servlet>
         <servlet-name>default</servlet-name>
